--- a/style.css
+++ b/style.css
@@ -1,32 +1,95 @@
-.grid-button {
-    justify-content: center;
+@import url(input-range-style.css);
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+body {
+    font-family: sans-serif;
+    font-size: 16px;
+    color: #333;
+    --space-S : .5rem;
+    --space-M : 1rem;
+    --space-L : 2rem;
+    --space-XL : 4rem;
+}
+.area-title {
+    display: flex;
     align-items: center;
-    padding: 10px;
-    border-radius: 5px;
+    padding: var(--space-M) var(--space-L);
+    gap: var(--space-L);
+}
+.area-title h1 {
+    text-transform: uppercase;
+    font-size: 1.25rem;
+    font-weight: 600;
+    letter-spacing: .2rem;
+}
+.area-title img {
+    max-width: 4rem;
+}
+.appliance {
+    display: flex;
+    align-items: center;
+}
+.appliance-title {
+    display: flex;
+    align-items: center;
+    padding: var(--space-M);
+    padding-left: var(--space-XL);
+    padding-right: var(--space-L);
+    gap: var(--space-L)
+}
+.appliance-title img {
+    max-width: 2rem;
+}
+.appliance-title h2 {
+    font-size: 1rem;
+    font-weight: 600;
+}
+.appliance-controls {
+    display: flex;
+    align-items: center;
+    gap: var(--space-M)
+}
+.appliance-btn {
+    padding: var(--space-M);
+    border: none;
+    border-radius: var(--space-S);
+    min-width: 5rem;
     cursor: pointer;
+    transition: 300ms;
+}
+.appliance-off {
+    background-color: #dc9e9e;
+}
+.appliance-on {
+    background-color: #beddac;
+}
+.appliance-off:hover {
+    background-color: #db8484;
+}
+.appliance-on:hover {
+    background-color: #a4db84;
 }
 
-.grid-button[data-color="1"] {
-    background-color:Tomato;
-}
-
-.grid-button[data-color="2"] {
-    background-color: YellowGreen;
-}
-
-.grid-button[data-color="3"] {
-    background-color: GoldenRod;
-}
-
-.grid-button:hover {
-    filter: brightness(0.8);
-}
-
-.appliance-icon {
-    width: 50px;
-    height: 50px;
-}
-
-.inline-block {
-   display: inline-block;
+@media (max-width: 30rem) {
+    .area {
+        margin-bottom: var(--space-L)
+    }
+    .area-title {
+        justify-content: center;
+    }
+    .appliance {
+        flex-direction: column;
+    }
+    .appliance-title {
+        padding-left: var(--space-L);
+    }
+    .appliance-controls {
+        flex-direction: column;
+    }
+    .appliance-btn {
+        width: 20rem;
+    }
 }
