Change layout Reorganize icons Add new icons Add new spaces Add new appliances Put back footer

--- a/style.css
+++ b/style.css
@@ -63,6 +63,12 @@ body {
 .appliance-off {
     background-color: #dc9e9e;
 }
+.appliance-idle {
+    background-color: #f1ce6f;
+}
+.appliance-charging {
+    background-color: #beddac;
+}
 .appliance-on {
     background-color: #beddac;
 }
