--- a/input-range-style.css
+++ b/input-range-style.css
@@ -5,6 +5,21 @@ input[type="range"] {
     background: transparent;
     cursor: pointer;
     width: 20rem;
+    position: relative;
+  }
+  input[type="range"]::after {
+    position: absolute;
+    background-image: linear-gradient(90deg, 
+      transparent calc(10% - 1px), #00000088 10%, transparent calc(10% - 1px),
+      transparent calc(20% - 1px), #00000088 20%, transparent calc(20% - 1px),
+      transparent calc(30% - 1px), #00000088 30%, transparent calc(30% - 1px),
+      transparent calc(40% - 1px), #00000088 40%, transparent calc(40% - 1px)
+    );
+    content: '';
+    top: .5rem;
+    bottom: .5rem;
+    left: 0;
+    right: 0;
   }
   
   /* Removes default focus */
